--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.4",
+    "react-syntax-highlighter": "^15.6.6",
     "react-tsparticles": "^2.12.2",
+    "rehype-highlight": "^7.0.2",
     "tsparticles": "^3.9.1"
   },
   "devDependencies": {
